# Local-Library

./: Dockerfile  README.md  db.sqlite3  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: populate_db.py
catalog/migrations/: 0004_language_alter_author_options_and_more.py  0005_alter_book_options.py
catalog/templates/: base_generic.html  index.html
catalog/templates/catalog/: author_detail.html  author_form.html  author_list.html  book_detail.html  book_list.html  book_renew_librarian.html
catalog/tests/: test_forms.py  test_models.py  test_views.py
locallibrary/: settings.py  urls.py
static/css/: src.css  tailwind.css
templates/registration/: login.html
